# ipifier

./: Cargo.toml  flake.nix
src/: args.rs  dns.rs  ip.rs  main.rs
