[package]
name = "ipfier"
version = "0.1.0"
edition = "2024"

[dependencies]
cloudflare = { git = "https://github.com/cloudflare/cloudflare-rs.git", tag = "v0.14.0", version = "0.14.0" }
reqwest = "0.12.22"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["rt"] }
tracing = { version = "0.1.41", default-features = false, features = [
  "attributes",
] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "registry",
] }
treetrace = "0.1.0"
url = { version = "2.5.4", default-features = false }
