[package]
name = "ipifier"
version = "0.1.2"
edition = "2024"

[dependencies]
cloudflare = { git = "https://github.com/cloudflare/cloudflare-rs.git", tag = "v0.14.0", version = "0.14.0" }
reqwest = { version = "0.12.23", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt"] }
tracing = { version = "0.1.44", default-features = false, features = [
  "attributes",
] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
  "registry",
] }
treetrace = { version = "0.1.1", default-features = false }
url = { version = "2.5.8", default-features = false }
